<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <Space android:id="@+id/config_dummy" 
        android:layout_width="0dp" 
        android:layout_height="0dp"
        android:layout_centerHorizontal="true" 
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/config_text_select_currency"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/config_select_currency_spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/config_select_currency_spinner"
        android:text="@string/config_select_currency" />

    <Spinner
        android:id="@+id/config_select_currency_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/config_dummy"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:prompt="@string/config_select_currency" />

    <TextView
        android:id="@+id/config_text_select_source"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/config_select_source_spinner"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/config_text_select_currency"
        android:layout_toLeftOf="@+id/config_select_source_spinner"
        android:text="@string/config_select_source" />

    <Spinner
        android:id="@+id/config_select_source_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/config_dummy"
        android:layout_alignParentRight="true"
        android:layout_below="@id/config_select_currency_spinner"
        android:prompt="@string/config_select_source" />

    <TextView
        android:id="@+id/config_text_user_coins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/config_user_assets"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/config_text_select_source"
        android:layout_toLeftOf="@+id/config_user_assets"
        android:text="@string/config_asset_prompt" />

    <EditText
        android:id="@+id/config_user_assets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/config_dummy"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/config_select_source_spinner"
        android:ems="10"
        android:gravity="right"
        android:inputType="numberDecimal" />

    <CheckBox
        android:id="@+id/config_invert_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/config_user_assets"
        android:text="@string/config_invert_prompt" />

    <Button
        android:id="@+id/config_btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:text="@string/config_ok_button" />

</RelativeLayout>